--- a/VRChat/58/1186158.html
+++ b/VRChat/58/1186158.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YGWcuAcVRpoTRAN+iuYp89702okVWamK1j4YYi5CDuQ="></script>
+    "Ds395HwvmUNPbahJhr6dYnszdMr1DJeSjMvLzdXObY4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"エアーホッケーテーブル","description":"VRChat用に作成したエアーホッケーテーブルです。ワールドのインテリアにどうでしょう！ギミックは仕込んでないので個人で調整してください。！基本自由に使っていただいてかまいませんが、法律に触れるようなことや転売は禁止しております。","url":"https://booth.pm/ja/items/1186158","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/985386bb-bc6d-41c5-b70d-4286e61a3033/i/1186158/a56ab697-4738-459c-af16-c325641c4dc5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YGWcuAcVRpoTRAN+iuYp89702okVWamK1j4YYi5CDuQ="></script>
+    nonce="Ds395HwvmUNPbahJhr6dYnszdMr1DJeSjMvLzdXObY4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1186158/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1186158/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               60
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
