--- a/VRChat/23/1185123.html
+++ b/VRChat/23/1185123.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "E7NQ8zjnToryQgfHezcSlVZB/xX8n4+7a7ec8k7A57I="></script>
+    "e4hEIyfRBYbjdn60cbS32spgt2wAQLkgO0RybomyCp4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スピカのマフラー ※Old Data","description":"△ポリゴン数660 マテリアル数1個 テクスチャー1枚\n\n「スピカのマフラー」\nスピカが王都で購入した安物のマフラー。\nモフモフしていて暖かい。\n\n●内容物\n・FBXデータ 1つ\n・PNGテクスチャー 1枚\n・UV展開図 1枚\n・Prefabs入りUnitypackageデータ 1つ\n・Readme 1枚\n\n●利用規約\n・再配布禁止。\n・商用利用禁止(ただし動画等メディアでの使用、映り込みは許可します)。\n・自作と偽る行為の禁止。\n・改変等その他行為の許可。\n\n●注意事項\n・本データはVRChatでの使用を想定しています。\n・本データを用いた事によるトラブルに関して作者は一切の責任を負いません。\n\n●コメント\n利用規約は堅苦しいですが、身構えずお気軽にご利用してくださると嬉しいです。\n再配布とか転売とかしなければ別に個人間の取引等で再配布してしまっても構いません。それくらい緩いです。\nご質問や、問題等がございましたらお気軽にご連絡下さい。\nシェーダーは まんまるシェーダーのClip_Culloffをオススメします。\n\n作者への連絡先 → https://twitter.com/Marun_Spirit\n\nDynamic Bone → https://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743","url":"https://booth.pm/ja/items/1185123","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8ff6fcbd-9bfc-47c9-869c-9f7e8280f01b/i/1185123/299e93cc-269c-4aa3-b07a-a1e1b86c9f4e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="E7NQ8zjnToryQgfHezcSlVZB/xX8n4+7a7ec8k7A57I="></script>
+    nonce="e4hEIyfRBYbjdn60cbS32spgt2wAQLkgO0RybomyCp4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1185123/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               412
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1185123/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               412
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
