--- a/VRChat/30/1184930.html
+++ b/VRChat/30/1184930.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Op3as+tDMYBakobakMgjWzLvMapCPRVY5R/HU+2Ed9M="></script>
+    "leGb1GQd5GjbEU1Rs4Tl9ypnUp42JQdMCHEwP9X0H5o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「phono」","description":"なんかケーブルとか繋がってる子です。\nVRChatのアバターの他、動画・ゲーム等の作成に利用することができます。\nフルトラッキング対応です。\n\n3Dモデル「phono」\n\n2019/01/18 ver1.0\n------------------------------------------------------------------------------\n\nフォルダ内容一覧\nphono.blend\nphono.fbx\nphono.unitypackage\nphono.png\nmetallic.png\nnormal.png\nphono.psd\nReadme_ja.txt\nReadme_en.txt\nTermOfUse_ja.txt\nTermOfUse_en.txt\n\n------------------------------------------------------------------------------\n\n・Unitypackageの動作環境はUnity 2017.4.15f1、VRCSDKはVRCSDK-2018.12.19.17.03_Publicで動作を確認しております。\n・Unitypackageのインポートの際、先にVRCSDKをインポートしておく必要があります。\n・フルトラッキング対応です。\n・Unitypackageにはみに(https://twitter.com/Mini_9321_VR)様の「まんまるシェーダーver1.4」の一部を同梱しています。\n\n------------------------------------------------------------------------------\n3Dモデル「phono」利用規約\n\n2018/01/18 ver1.0\n------------------------------------------------------------------------------\n\n本モデルを使用した時点で本利用規約に同意したものとします。\n\n------------------------------------------------------------------------------\n・利用について\nVRChatのアバターとしての使用の他、動画配信、ゲーム・アニメーション・イラスト等の製作に営利・非営利を問わず利用することができます。\n\n・改変について\nモデルデータ及びテクスチャデータの改変は自由に行うことができます。\n\n・R-18・R-18Gへの利用について\n特に規制はありません。\n\n・禁止事項\n配布データについては改変の有無を問わず再配布を禁止します。\nまた特定個人・団体への中傷を目的とした利用を禁止します。\n\n・著作権について\n配布データ及び改変データの著作権は配布データの製作者 みきしぃ に帰属するものとします。\n配布データを利用した著作物の公開は自由に行うことができます。\n\n・免責事項\n配布データを用いたことによるいかなる損害についても製作者 みきしぃ は一切の責任を負わないものとします。\nこの利用規約は予告なく変更される場合があります。ご了承ください。\n\n------------------------------------------------------------------------------\n\n不明点・質問等ありましたら以下にご連絡ください。\nTwitter: @3405691582\nMail: m.myxomatosis@gmail.com\n","url":"https://booth.pm/ja/items/1184930","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1184930/eb6282d6-a45a-4aae-8a59-764871e37e47_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Op3as+tDMYBakobakMgjWzLvMapCPRVY5R/HU+2Ed9M="></script>
+    nonce="leGb1GQd5GjbEU1Rs4Tl9ypnUp42JQdMCHEwP9X0H5o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1184930/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1184930/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
