--- a/VRChat/03/1184503.html
+++ b/VRChat/03/1184503.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "W5Xz0aQSZgVv2jNEUklF0ExK1XfYmX5WA3I7IDxM5L0="></script>
+    "j8z+fpPbS4M56ii1egtExPfIbC+v9pjr+gRttrq+8KA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC布教用】トコシエコウ△236","description":"トコシエコウのみです。\nメイアビのロゴは入ってません。\n\n\nメイドインアビスって作品は面白いですよ！是非見てくださいね！\nちなみに私は黎明卿推しですよ！","url":"https://booth.pm/ja/items/1184503","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dc5fa78f-d72c-45fe-9856-ff0a40ae2b08/i/1184503/ee53936a-12d7-4145-889d-c4e25ca53199_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="W5Xz0aQSZgVv2jNEUklF0ExK1XfYmX5WA3I7IDxM5L0="></script>
+    nonce="j8z+fpPbS4M56ii1egtExPfIbC+v9pjr+gRttrq+8KA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1184503/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               156
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1184503/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               156
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
